Removed OpenCV from configure.ac

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-1 Correlation sur toute l'image
-2 Appliquer la 3D
-3 Sortie avec traits
-4 Correlation en echelle
+1 Appliquer la 3D
+2 Sortie avec traits
+3 Correlation en echelle
+4 Interface avec Kinect / Test de mouvement
