Created an Image class hierarchy for easier manipulation. Changed GUI mode to display Kinect Output on screen. Created Workers to write captured images to files so that the capture doesn't stutter.
Signed-off-by: Vinicius Dias de Oliveira Gardelli <gardelli123@gmail.com>

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-1 Appliquer la 3D
-2 Sortie avec traits
-3 Correlation en echelle
-4 Interface avec Kinect / Test de mouvement
+1 Trouver les frames ancre
+2 Treshold
+3 Rematching
+4 Correlation en echelle
