Making gdb function only for strange values

--- a/report/doc/pim.tex
+++ b/report/doc/pim.tex
@@ -36,7 +36,17 @@
 \setcounter{page}{1}
 
 \section*{Introduction}
-\nocite{WIKI1}
+
+\section*{Etat de l'art}
+
+\section*{Remerciement}
+Nous tiendrons tout d’abord à remercier Dr Tamy Boubekeur, le professeur responsable du projet et notre tuteur, de nous avoir accueilli comme élévés au sein du projet et la confiance qu’il nous a accordé tout au long de notre projet.
+
+Nous remercions également Thierry Guillemot et Stéphane Calderon, pour leur volonté à m’aider pendant toute la période de notre projet PIM.
+
+\nocite{Beeler:2010:HSC:1778765.1778777}
+\nocite{Beeler:2011:HPF:2010324.1964970}
+
 % ******************************************************
 % REFERENCIAS BIBLIOGRÁFICAS
 % ******************************************************
