--- a/report/doc/pim.bib
+++ b/report/doc/pim.bib
@@ -1,84 +1,40 @@
-@misc {ONG,
-AUTHOR = {Euractiv},
-TITLE = {Energie et changement climatique : vers une politique européenne intégrée [FR]
-},
+@article{Beeler:2011:HPF:2010324.1964970,
+ author = {Beeler, Thabo and Hahn, Fabian and Bradley, Derek and Bickel, Bernd and Beardsley, Paul and Gotsman, Craig and Sumner, Robert W. and Gross, Markus},
+ title = {High-quality passive facial performance capture using anchor frames},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2011},
+ volume = {30},
+ number = {4},
+ month = jul,
+ year = {2011},
+ issn = {0730-0301},
+ pages = {75:1--75:10},
+ articleno = {75},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2010324.1964970},
+ doi = {10.1145/2010324.1964970},
+ acmid = {1964970},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {facial performance capture, motion capture, space-time geometry reconstruction},
+} 
 
-HOWPUBLISHED = {Disponible en http://www.euractiv.com/fr/energie/energie-et-changement-climatique-vers-une-politique-europ-enne-int-gr-fr-linksdossier-188789.
-},
-YEAR = {2011},
-}
-
-@misc {GREENPEACE,
-AUTHOR = {GreenPeace},
-TITLE = {Impacts climatiques en France},
-HOWPUBLISHED = {Disponible en http://www.greenpeace.fr/impactsclimatiques/impactclimfr.html},
-YEAR = {2011},
-}
-
-@misc {DOCFRANCE,
-AUTHOR = {La documentation Française },
-TITLE = {Changement climatique: Coûts des impacts et pistes d’adaptation
-},
-HOWPUBLISHED = {Disponible en http://www.ladocumentationfrancaise.fr/rapports-publics/094000463/index.shtml},
-YEAR = {2011},
-}
-
-
-
-
-@misc {FR,
-AUTHOR = {LeMonde},
-TITLE = {
-Les Français croient-ils au réchauffement climatique de la planète ?
-},
-HOWPUBLISHED = {Disponible en http://ecologie.blog.lemonde.fr/2010/01/19/les-francais-croient-ils-au-rechauffement-climatique-de-la-planete/
-},
-YEAR = {2010},
-}
-
-@misc {WIKI1,
-AUTHOR = {Wikipédia},
-TITLE = {Gaz à effet de serre},
-HOWPUBLISHED = {Disponible en
-                  http://fr.wikipedia.org/wiki/Gaz A effet de serre},
-YEAR = {2011},
-}
-
-
-@misc {ACTU,
-AUTHOR = {Actu-environnement},
-TITLE = { Actu-environnement (2011). Durban : le Protocole de Kyoto s'éloigne comme un mirage.},
-HOWPUBLISHED = { Disponible en: http://www.actu-environnement.com/ae/news/bilan-conference-durban-2011-climat-14379.php4},
-YEAR = {2011},
-}
-
-
-@misc {GV,
-AUTHOR = {Gouvernement},
-TITLE = {Le portail du gouvernement Français(2011). La conférence de Durban sur le changement climatique.},
-HOWPUBLISHED = { Disponible en: http://www.gouvernement.fr/gouvernement/la-conference-de-durban-sur-le-changement-climatique},
-YEAR = {2011},
-}
-
-
-@misc {DIP,
-AUTHOR = {Diplomatie},
-TITLE = {Diplomatie Française (2011)},
-HOWPUBLISHED = {Disponible en:http://www.diplomatie.gouv.fr},
-YEAR = {2011},
-}
-
-
-@misc {SEQ,
-AUTHOR = {Sequovia},
-TITLE = {Taxe carbone: le retour?},
-HOWPUBLISHED = {Disponible en: http://www.sequovia.com/actualites/8359-taxe-carbone-le-retour.html},
-YEAR = {2011},
-}
-
-@misc {DOC,
-AUTHOR = {Documentation},
-TITLE = {La documentation Française (2011)},
-HOWPUBLISHED = { Disponible en: http://www.ladocumentationfrancaise.fr/dossiers/changement-climatique/chronologie.shtml},
-YEAR = {2011},
-}
+@article{Beeler:2010:HSC:1778765.1778777,
+ author = {Beeler, Thabo and Bickel, Bernd and Beardsley, Paul and Sumner, Bob and Gross, Markus},
+ title = {High-quality single-shot capture of facial geometry},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2010},
+ volume = {29},
+ number = {4},
+ month = jul,
+ year = {2010},
+ issn = {0730-0301},
+ pages = {40:1--40:9},
+ articleno = {40},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/1778765.1778777},
+ doi = {10.1145/1778765.1778777},
+ acmid = {1778777},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
