--- a/report/doc/pim.tex
+++ b/report/doc/pim.tex
@@ -89,7 +89,21 @@ Cependant, il reste encore des improvements pour cette approche, notamment par r
 
 \section{Le projet}
 
-Les cinq étapes de la méthode sont:
+Dans ce projet, on essayera de réproduire les étapes réalises par Beeler et al. dans le papier ``High-quality passive facial performance capture using anchor frame'' pour la création d'une mesh qui réproduit la visage.
+Dans l'article sont matériel est un matériel d'haute définition, notre but dans le projet est de réaliser, ainsi que possible, une version moins chères de la création des visages, qui pourrait etre réalisé par toutes les personnes disposant d'une limitation matériel.
+
+\subsection{Matériel}
+Ci-dessous la liste de matériel utilisé dans le projet: 
+
+\begin{itemize}
+\item Une Kinect responsable pour captures des images 640 × 480 en couleur 32 bits ainsi comme une image de profondeur. 
+\end{itemize}
+
+
+\subsection{Méthodes}
+
+Le projet est divisé en cinq étapes: 
+
 \begin{enumerate}
 \item Calcul du maillage initial
 \item Ancrage
@@ -97,6 +111,28 @@ Les cinq étapes de la méthode sont:
 \item Propagation de la maillage
 \item Raffinement de maillage
 \end{enumerate}
+
+\subsubsection{Calcul du maillage initial}
+Chaque image de la séquence est traitée indépendamment pour générer une première estimation de la maillage pour cette trame.
+
+\subsubsection{Ancrage}
+Une trame est identifié manuellemnt comme la trame de réference. Puis, les trames qui ont une apparance similaire (expression du visage samblable et l'orientation de la tête) sont identifiées automatiquement et étiquetés comme des trames d'ancrage. Ces trames ancres seront un moyen de partitionner la séquence complète des clips de trames pour le traitement dans la prochaine étape.
+
+\subsubsection{Localisation image-space}
+Le but de cette étape est de suivre les pixels de l'image à partir du trame de référence pour chaque image dans la séquence. 
+
+Le processus commence par le suivi de pixels d'image à partir de la trame de référence pour les trames d'ancrage, ce qui est simple, car l'aspect de l'image en deux trames est, par définition, similaire. Cela permettra d'orienter le cheminement de pixels d'image à partir de la trame de référence à toutes les autres trames dans la séquence. 
+Le suivi des trames non ancres est réalisé de manière séquentielle, à partir des trames ancres les plus proches.
+
+\subsubsection{Propagation de la maillage}
+
+Une propagation de maille désigne le calcul de nouvelles positions des sommets du maillage dans l'espace, en correspondance avec le mouvement physique de la face.
+
+Un moyen pour propager la la maillage de référence (maillage de la trame de référence calculé à l'étape 1), pour toutes les trames dans la séquence, est l'utilisation des pixels de l'image suivis obtenues à l'étape 3.
+ 
+\subsubsection{Raffinement de maillage}
+
+Les étapes précédentes ont généré une propagation de la maille de référence pour chaque trame dans la séquence. Cette séquence de maillage déformant fournit une estimation initiale du mouvement du visage, ce qui est raffiné pour garantir la cohérence avec les données d'image en appliquant priori sur la cohérence spatiale et temporelle de la surface déformée.
 
 \section{Résultats}
 
