--- a/report/doc/pim.sty
+++ b/report/doc/pim.sty
@@ -19,6 +19,7 @@
 
 %language
 \RequirePackage[T1]{fontenc}
+\RequirePackage{type1cm} 
 \RequirePackage{babel}
 \RequirePackage[utf8]{inputenc}   % acentuação
 \RequirePackage{ae,aecompl,aeguill}  % pdfs plus beaux =)
