--- a/report/doc/pim.tex
+++ b/report/doc/pim.tex
@@ -99,6 +99,12 @@ Ci-dessous la liste de matériel utilisé dans le projet:
 \item Une Kinect responsable pour captures des images 640 × 480 en couleur 32 bits ainsi comme une image de profondeur. 
 \end{itemize}
 
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[scale=0.2]{img/kinect.jpg}
+    \caption{Kinect - Dispositif utilisé pour la capture des images}
+  \end{center}
+\end{figure}
 
 \subsection{Méthodes}
 
@@ -111,6 +117,14 @@ Le projet est divisé en cinq étapes:
 \item Propagation de la maillage
 \item Raffinement de maillage
 \end{enumerate}
+
+
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[scale=0.4]{img/projDiagram.png}
+    \caption{Etapes du projet}
+  \end{center}
+\end{figure}
 
 \subsubsection{Calcul du maillage initial}
 Chaque image de la séquence est traitée indépendamment pour générer une première estimation de la maillage pour cette trame.
