Adding abstract page. Defining spacement to 1.5

--- a/report/doc/pim.sty
+++ b/report/doc/pim.sty
@@ -28,7 +28,7 @@
 \RequirePackage[linkbordercolor={1 1 1},urlcolor=black,citecolor=black,linkcolor=black,colorlinks=true]{hyperref} % links
 \RequirePackage{subfig}
 \RequirePackage[letterpaper]{geometry}
-\geometry{verbose,lmargin=2.0cm,rmargin=2.0cm,top=2cm, bottom=2.0cm}
+\geometry{verbose,lmargin=2.0cm,rmargin=2.0cm,top=3cm, bottom=2.0cm}
 
 %%% autres %%%
 \RequirePackage{ifthen}
@@ -39,7 +39,7 @@
 \RequirePackage{multicol} 
 \RequirePackage{amsfonts}
 \RequirePackage{amsmath} 
-%\RequirePackage{pgfplots} % graphics
+\RequirePackage{pgfplots} % graphics
 \RequirePackage{setspace}
 
 
