--- a/report/doc/pim.bib
+++ b/report/doc/pim.bib
@@ -38,3 +38,20 @@
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@MANUAL{Openni2010, 
+  title = {OpenNI User Guide}, 
+  organization = {OpenNI organization}, 
+  month = {November}, 
+  year = {2010}, 
+  note = {Last viewed 19-04-2013 11:32}, 
+  url = {http://www.openni.org/documentation}, 
+} 
+
+@MANUAL{PrimeSense2010, 
+  title = {Prime Sensor NITE 1.3 Algorithms notes}, 
+  organization = {PrimeSense Inc.}, 
+  year = {2010}, 
+  note = {Last viewed 19-01-2011 15:34}, 
+  url = {http://www.primesense.com},
+} 
