Finishing UI part

--- a/report/doc/pim.bib
+++ b/report/doc/pim.bib
@@ -55,3 +55,11 @@
   note = {Last viewed 19-01-2011 15:34}, 
   url = {http://www.primesense.com},
 } 
+
+@MISC{Pencil, 
+  title = {Pencil Project}, 
+  organization = {Evolus}, 
+  year = {2012}, 
+  url = {http://pencil.evolus.vn/},
+} 
+
